--- a/package.json
+++ b/package.json
@@ -3,16 +3,30 @@
   "version": "1.0.0",
   "description": "## Project info",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "jest",
-    "watch": "jest --watch *.js"
+    "watch:jest": "jest --watch *.js",
+    "watch:webpack": "webpack --watch",
+    "start:webpack": "webpack serve --open",
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --mode production"
   },
-  "author": "",
+  "author": "jcampbell57",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "css-loader": "^7.1.1",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
