--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
+    "@eslint/js": "^9.2.0",
     "babel-jest": "^29.7.0",
     "css-loader": "^7.1.1",
+    "eslint": "^9.2.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.2.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "prettier": "3.2.5",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
