--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "watch:webpack": "webpack --watch",
     "start:webpack": "webpack serve --open",
     "build:dev": "webpack --mode development",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --mode production",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "jcampbell57",
   "license": "ISC",
